@@ -1,3 +1,11 @@
+2004-05-20  Bruno Haible  <bruno@clisp.org>
+
+	Increase memory sizes for builds with fixed memory size.
+	* makemake.in (interpreted.mem, halfcompiled.mem): Grant 1400 KW.
+	(*.fas): Grant 1800 KW.
+	(stage/*.fas): Grant 750 KW.
+	(check-ansi-tests, check-ansi-tests-debug): Grant 30000 KW.
+
 2004-05-26  Sam Steingold  <sds@gnu.org>
 
 	* pathname.d (MAKE-LOGICAL-PATHNAME): accept :DEVICE :UNSPECIFIC
